Horizontal scroll bar fix.

--- a/wp-content/themes/galenko.lv/assets/css/app.css
+++ b/wp-content/themes/galenko.lv/assets/css/app.css
@@ -20,5 +20,5 @@ a img.aligncenter {display: block;margin-left: auto;margin-right: auto;}
 .editor_content p {margin: 0 0 1.44em 0;}
 .editor_content ul, .editor_content ol {margin-top: 0;margin-bottom: 1.44em;}
 .editor_content > *:last-child {margin-bottom: 0;}
-body {font-family: sans-serif;font-size: 16px;line-height: 1.66em;}
+body {font-family: sans-serif;font-size: 16px;line-height: 1.66em;max-width: 100%;overflow-x:hidden;}
 .container-fluid {width: 100%;max-width: 1170px;}
